...
        android:layout_marginStart="21dp"
        android:text="@string/enter_file_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFileCreation" />

    <EditText
        android:id="@+id/editTextFileName"
        android:layout_width="272dp"
        android:layout_height="50dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/color_font_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEnterFileName" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:background="@color/color_empty"
        android:fontFamily="@font/trirong_thin"
        android:text="@string/change"
...
